--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="GigJob - Find your job"
+      content="Shop-Apple"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>GigJob - Find your job</title>
+    <title>Shop-Apple</title>
   </head>
   <body style="background-color: #f7f7f7;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
